css/style.css
@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Poppins:wght@100;200;300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "poppins", sans-serif;
  outline: none;
}

body {
  height: 100vh;
  display: flex;
  justify-content: center;
}

.container > .header {
  height: 150px;
  width: 100%;
  text-align: center;
  background: teal;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 20px;
  color: #fafafa;
  font-size: 50px;
}

.container {
    width: 341.5%;
}

main {
  max-width: 550px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.resume {
  display: flex;
  padding: 10px 0;
  gap: 40px;
  width: 100%;
  justify-content: center;
  flex-wrap: wrap;
}

.resume > div {
  display: flex;
  flex-direction: column;
  box-shadow: 0px 0px 5px teal;
  border-radius: 10px;
  padding: 10px;
  width: 150px;
}

.newItem {
  display: flex;
  gap: 10px;
  align-items: end;
  width: 100%;
  justify-content: center;
  flex-wrap: wrap;
}

.divDesc,
.divType,
.divAmount {
  display: flex;
  flex-direction: column;
}

.newItem > button {
  background-color: teal;
  color: #fafafa;
  border: none;
  padding: 0 15px;
  border-radius: 5px;
  cursor: pointer;
  height: 34px;
}

input,
select {
  padding: 5px;
}

.divTable {
  width: 100%;
  display: flex;
  justify-content: center;
}

table {
  width: 98%;
  padding: 20px 0;
  border-radius: 5px;
}

th {
  text-align: start;
  border-bottom: inset;
  padding-bottom: 5px;
}

i {
  font-size: 25px;
}

.columnAction {
  width: 40px;
  text-align: center;
}

.columnAction > button {
  background: transparent;
  border: none;
}

.columnAmount {
  width: 30%;
}

.columnType {
  width: 80px;
  text-align: center;
}

